--- a/09_advnce_one/ApiRequest.html
+++ b/09_advnce_one/ApiRequest.html
@@ -10,6 +10,7 @@
             /* Add shadows to create the "card" effect */
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
             transition: 0.3s;
+            width: 20%;
         }
 
         /* On mouse-over, add a deeper shadow */
@@ -31,7 +32,7 @@
     3 LOADING Downloading; responseText holds partial data.
     4 DONE The operation is complete.
     <div class="card">
-        <img src="img_avatar.png" alt="Avatar" style="width:20%">
+        <img src="img_avatar.png" alt="Avatar" style="width:100%">
         <div class="container">
             <h4><b>John Doe</b></h4>
             <p>Architect & Engineer</p>
@@ -50,7 +51,7 @@
             console.log(typeof data);
             console.log(data.followers);
             console.log(data.avatar_url);
-            
+
             // assignment
             document.querySelector('img').setAttribute("src", `${data.avatar_url}`)
             document.querySelector('h4').innerHTML = (data.name)
